# mprpc

./: .gitignore  CMakeLists.txt  LICENSE  README.md  autobuild.sh
example/: CMakeLists.txt  example.conf  friend.pb.cc  friend.pb.h  friend.proto  user.pb.cc  user.pb.h  user.proto
example/callee/: CMakeLists.txt  friendservice.cpp  userservice.cpp
example/caller/: CMakeLists.txt  callfriendservice.cpp  calluserservice.cpp
include/: lockqueue.h  logger.h  mprpcapplication.h  mprpcchannel.h  mprpcconfig.h  mprpccontroller.h  mprpcprovider.h  rpcheader.pb.h  rpcprovider.h  zookeeperutils.h
src/: CMakeLists.txt  logger.cpp  mprpcapplication.cpp  mprpcchannel.cpp  mprpcconfig.cpp  mprpccontroller.cpp  mprpcprovider.cpp  rpcheader.pb.cc  rpcheader.proto  rpcprovider.cpp  zookeeperutils.cpp
test/protobuf/: main.cpp  test.pb.cc  test.pb.h  test.proto
